update DOM gukerba.js, style.css, index.html

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Game Gunting Kertas Batu</title>
+    <title>GUKERBA</title>
     <link rel="stylesheet" href="style.css">
     <link rel="shortcut icon" href="img/icon-gukerba.png">
   </head>
@@ -12,24 +12,26 @@
     <div class="container">
         <div class="area-komputer">
             <div class="tittle-com"><h2>Computer</h2></div>
-            <img src="img/gajah.png" class="img-komputer">
+            <img src="img/batu.png" class="img-computer">
         </div>
         <div class="info">DRAW</div>
         <div class="area-player">
             <ul>
                 <li>
-                    <img src="img/gajah.png" class="gajah">
+                    <img src="img/gunting.png" class="gunting">
                 </li>
                 <li>
-                    <img src="img/orang.png" class="orang">
+                    <img src="img/kertas.png" class="kertas">
                 </li>
                 <li>
-                    <img src="img/semut.png" class="semut">
+                    <img src="img/batu.png" class="batu">
                 </li>
             </ul>
             <div class="tittle-player"><h2>Player</h2></div>
             
         </div>
     </div>
+
+    <script src="gukerba.js"></script>
   </body>
 </html>
